--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "csvtojson": "^2.0.10",
-    "hapi": "^17.2.0"
+    "hapi": "^17.2.0",
+    "request-ip": "^2.1.3"
   }
 }
